FindBugs: fix 'instanceof will always return true', 'Method invokes inefficient Number constructor; use static valueOf instead'